[project]
name = "thoughtminers"
version = "0.0.1a"
description = "Hierarchical reinforcement learning models of reasoning trajectories in Large Language Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "huggingface_hub",
    "numpy",
    "scikit-learn",
    "scipy",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "tqdm",
    "pytest>=8.3.5",
    "pre-commit"
]